Archive2/dd/dbd2638e2aa2d4/output
main.cpp:28:59: error: expected primary-expression before ',' token
     static constexpr unsigned int byteoffset = offsetof( U, t );
                                                           ^
main.cpp:23:10: error: invalid use of non-static data member 'Vertex<Tn, P>::t'
     T t[n];
          ^
main.cpp:28:61: error: from this location
     static constexpr unsigned int byteoffset = offsetof( U, t );
                                                             ^
main.cpp:28:63: error: there are no arguments to 'offsetof' that depend on a template parameter, so a declaration of 'offsetof' must be available [-fpermissive]
     static constexpr unsigned int byteoffset = offsetof( U, t );
                                                               ^
main.cpp:28:63: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
